Fix: Implement hero slider and branding tab image upload functionality
- Consolidate hero slider image upload functions between Hero Slider tab and Branding tab
- Update uploadHeroImages() to handle uploads from both tabs and save to Supabase
- Remove duplicate addSliderImage() and removeSlider() local storage functions
- Ensure hero images persist to database and display on public hero section
- Fix Hero Slider Configuration tab to properly upload images to Supabase
- Update renderAdminSlider() to show proper empty state and use removeHeroImage()
- Improve startHeroSlider() with fallback gradient when no images available
- Update removeHeroImage() to refresh all displays including public hero section
- Branding tab now properly loads and displays hero images from database
- Both admin tabs now sync and display the same hero slider images

--- a/index.html
+++ b/index.html
@@ -248,10 +248,13 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label>Add New Slide</label>
+                        <label>Upload Hero Slider Images</label>
+                        <p style="color: var(--text-muted); margin-bottom: 15px; font-size: 0.9em;">Upload images that will appear in the hero slider on the public home page</p>
                         <div class="file-drop-zone">
-                            <input type="file" id="sliderFileInput" accept="image/*">
-                            <button class="btn btn-primary" onclick="addSliderImage()">Add Image</button>
+                            <input type="file" id="sliderFileInput" accept="image/*" multiple>
+                            <button class="btn btn-primary" onclick="uploadHeroImages()">
+                                <i class="fas fa-cloud-upload-alt"></i> Upload Hero Images
+                            </button>
                         </div>
                     </div>
                 </div>
